--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,22 +1,21 @@
 <!--index.wxml-->
 <view class="container">
   <view class="content">
-    <div>waiting for what I said, for ever......</div>
+    <div>waiting for what I said</div>
+    <div>for ever and nerver......</div>
     <div style="margin-bottom: 10rpx;">day-{{days}}</div>
-    <div>......</div>
-    <div>小小的泪水还在撑</div>
-    <div>稚嫩的唇　在说离分</div>
-    <div>我的心里从此住了一个人</div>
+    <div>坚持信念</div>
+    <div>永远等待</div>
+    <div>海阔天空</div>
     <div>......</div>
   </view>
   <canvas style="width: 100%; height:{{canvasHeight}}px" canvas-id="myCanvas">
   </canvas>
   <view class="my-word">
-    <div>......</div>
     <div>我在找那个故事里的人</div>
-    <div>你是不能缺少的部分</div>
-    <div>小小的手牵小小的人</div>
     <div>守著小小的永恒</div>
+    <div>哪怕永远也叫不醒</div>
+    <div>一个装睡的人</div>
     <div>......</div>
   </view>
 </view>
